<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="@color/firebrick"
    android:id="@+id/authLayout">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="@style/ToolbarTheme.text"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="70sp"
        android:layout_marginTop="40dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp">

        <EditText
            android:id="@+id/txt_email"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textColorHighlight="@color/white"
            android:outlineSpotShadowColor="@color/white"
            android:outlineAmbientShadowColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/email"
            android:textSize="20sp"
            android:gravity="center"/>

        <EditText
            android:id="@+id/txt_pass"
            android:inputType="textPassword"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textColorHighlight="@color/white"
            android:outlineSpotShadowColor="@color/white"
            android:outlineAmbientShadowColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:hint="@string/pass"
            android:textSize="20sp"
            android:gravity="center"/>

        <Button
            android:id="@+id/btn_signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="32dp"
            android:background="@color/rosybrown"
            android:textColor="@android:color/white"
            android:text="@string/btn_acceder"
            android:textSize="17sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ó accede con"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginTop="40dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageButton
                android:id="@+id/googleButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/botton_social"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/google"
                tools:srcCompat="@drawable/google" />

            <ImageButton
                android:id="@+id/facebookButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:scaleType="fitCenter"
                android:background="@drawable/botton_social"
                app:srcCompat="@drawable/facebook"
                tools:srcCompat="@drawable/facebook"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_account"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginTop="100dp"/>

        <Button
            android:id="@+id/btn_signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:text="@string/btn_registro"
            android:textColor="@android:color/white"
            android:background="@color/rosybrown"
            android:textSize="17sp"/>

    </LinearLayout>

</LinearLayout>